Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8212937

Parent class loader may not have a referred ClassLoaderData instance when obtained in Klass::class_in_module_of_loader

XMLWordPrintable

    • b19

        Parent class loader may not have a referred ClassLoaderData instance when obtained in Klass::class_in_module_of_loader method. This situation triggers assertions in debug builds and crashes the JVM with a null dereferencing in release builds.

        ClassLoaderData instance may be null if, for instance, the class loader never defined a class.

              lfoltan Lois Foltan
              mbalao Martin Balao Alonso
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: