8212937: Parent class loader may not have a referred ClassLoaderData instance when obtained in Klass::class_in_module_of_loader

Fix to obtain the class loader's name from the java.lang.ClassLoader object instead of its ClassLoaderData.

Reviewed-by: coleenp, mbalao, sgehwolf